--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyncX</title>
+    <title>SyncZ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="website icon" type="image/png" href="{{url_for('static', filename='assets/favicon.png')}}">
+    <meta property="og:title" content="SyncZ" />
+    <meta property="og:description" content="The Ultimate Virtual Syncing" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://SyncZ.is-a.dev" />
+    <meta property="og:image" content="{{url_for('static', filename='img/ogImage.png')}}" />
 
 </head>
 
 <body>
     <div class="hero bg-fade"></div>
     <div class="hero main d-flex flex-column align-items-center justify-content-center">
-        <h1 data-bs-theme="light" class="heading ">SyncX</h1>
+        <h1 data-bs-theme="light" class="heading ">SyncZ</h1>
         <p>The Ultimate Vitrual Syncing</p>
         <span class="buttons">
             <a href="/login" class="btn btn-dark me-5">Login</a>
