--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="SyncZ" />
     <meta property="og:description" content="The Ultimate Virtual Syncing" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://SyncZ.is-a.dev" />
-    <meta property="og:image" content="{{url_for('static', filename='img/ogImage.png')}}" />
+    <meta property="og:url" content="https://syncz.is-a.dev" />
+    <meta property="og:image" content="{{url_for('static', filename='assets/ogImage.png')}}" />
 
 </head>
 
