--- a/templates/join_meeting.html
+++ b/templates/join_meeting.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <link rel="website icon" type="image/png" href="{{url_for('static', filename='assets/favicon.png')}}">
 </head>
 
 <body>
     <div class="hero bg-fade"></div>
     <div class="hero main d-flex flex-column align-items-center justify-content-center">
-        <form action="/login" method="post">
+        <form action="/join" method="post">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Meeting ID</label>
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="room_id">
