--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="SyncZ" />
     <meta property="og:description" content="The Ultimate Virtual Syncing" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://syncz.is-a.dev" />
+    <meta property="og:url" content="https://syncz.onrender.com" />
     <meta property="og:image" content="{{url_for('static', filename='assets/ogImage.png')}}" />
 
 </head>
